# ChangeLog for dev-python/cython
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.27 2009/09/05 13:51:03 patrick Exp $

  05 Sep 2009; Patrick Lauer <patrick@gentoo.org> -cython-0.9.6.12.ebuild,
  -cython-0.9.8.1.ebuild, -cython-0.9.8.1.1.ebuild:
  Remove old

*cython-0.11.2-r1 (12 Aug 2009)

  12 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +cython-0.11.2-r1.ebuild:
  Set SUPPORT_PYTHON_ABIS.

  26 Jul 2009; Brent Baude <ranger@gentoo.org> cython-0.11.2.ebuild:
  stable ppc64, bug 277124

  23 Jul 2009; Raúl Porcel <armin76@gentoo.org> cython-0.11.2.ebuild:
  ia64 stable wrt #277124

  23 Jul 2009; Jeremy Olexa <darkside@gentoo.org> cython-0.11.2.ebuild:
  amd64 stable, bug 277124

  23 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  cython-0.11.2.ebuild:
  Disable some optimizations to avoid test failures.

  17 Jul 2009; nixnut <nixnut@gentoo.org> cython-0.11.2.ebuild:
  ppc stable #277124

  10 Jul 2009; Ferris McCormick <fmccor@gentoo.org> cython-0.11.2.ebuild:
  Sparc stable, Bug #277124.

  10 Jul 2009; Jeroen Roovers <jer@gentoo.org> cython-0.11.2.ebuild:
  Stable for HPPA (bug #277124).

  09 Jul 2009; Christian Faulhammer <fauli@gentoo.org> cython-0.11.2.ebuild:
  stable x86, bug 277124

*cython-0.11.2 (07 Jun 2009)

  07 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +cython-0.11.2.ebuild:
  Version bump (bug #272571).

  30 Apr 2009; Patrick Lauer <patrick@gentoo.org> +cython-0.9.6.12.ebuild:
  Restore a 0.9.6 version, we don't want to break ppc

  30 Apr 2009; Patrick Lauer <patrick@gentoo.org> -cython-0.9.6.6.ebuild,
  -cython-0.9.6.10b.ebuild, -cython-0.9.6.12.ebuild:
  Remove old

  26 Mar 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml:
  Removing hawking as a maintainer since he was retired.

*cython-0.9.8.1.1 (20 Oct 2008)
