@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/cython
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.27 2009/09/05 13:51:03 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.28 2009/09/27 20:47:00 arfrever Exp $
+
+*cython-0.11.3 (27 Sep 2009)
+
+  27 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +cython-0.11.3.ebuild:
+  Version bump.
 
   05 Sep 2009; Patrick Lauer <patrick@gentoo.org> -cython-0.9.6.12.ebuild,
   -cython-0.9.8.1.ebuild, -cython-0.9.8.1.1.ebuild:
